# Learn-Agentic-Ai

./: README.md
00_environment_setup/: README.md
01_crew_ai/01_uv/first_project/src/first_project/: hello.py
01_crew_ai/02_litellm/my_project/: pyproject.toml
01_crew_ai/02_litellm/my_project/src/my_project/: hello.py
01_crew_ai/03_crewai/my_new_flow/: poem.txt
01_environment_setup/: README.md
01_uv/01_project/first_program/src/first_program/: hello.py
01_uv/first_project/: pyproject.toml
02_crew/00_uv/01_project/first_program/: pyproject.toml
02_crew/00_uv/01_project/first_program/src/first_program/: __init__.py
02_crew/01_liteLLm/project1/my_project/: README.md  pyproject.toml
02_crew/01_liteLLm/project1/my_project/src/my_project/: hello.py
02_crew/01_uv/01_project/first_program/: README.md
02_crew/02_crewai/00_first_flow/: README.md
02_crew/02_crewai/00_first_flow/my_new_flow/: .env  .gitignore  poem.txt
02_crew/02_crewai/03_third_flow/pana/: .env  pyproject.toml
02_crew/02_crewai/03_third_flow/pana/src/pana/: main.py
02_crew/02_crewai/03_third_flow/pana/src/pana/crews/config/: agents.yaml  tasks.yaml
02_crew/02_crewai/03_third_flow/pana/src/pana/crews/teaching_crew/: __init__.py  teaching_crew.py
02_litellm/my_project/src/my_project/: hello.py
03_crewai_online_class/class_13/knowledge5/: README.md  pyproject.toml
03_crewai_online_class/class_13/knowledge5/src/knowledge5/: main.py  main1.py
03_crewai_online_class/class_13/litellm1/: poem.txt  pyproject.toml
03_crewai_online_class/class_13/litellm1/src/litellm1/: main1.py
03_crewai_online_class/class_13/localllm2/: poem.txt  pyproject.toml
03_crewai_online_class/class_13/multiple_agents/: pyproject.toml
03_crewai_online_class/class_13/multiple_agents/src/multiple_agents/: main1.py  main2.py
03_crewai_online_class/class_13/multiple_agents/src/multiple_agents/crews/dev_crew/: dev_crew1.py
03_crewai_online_class/class_13/multiple_agents/src/multiple_agents/crews/dev_crew/config/: tasks.yaml
03_crewai_online_class/class_13/multiple_agents1/src/multiple_agents/crews/dev_crew/: dev_crew.py
03_crewai_online_class/class_13/multiple_agents1/src/multiple_agents/crews/dev_crew/config/: tasks.yaml
03_crewai_online_class/class_13/multiple_agents_with_two_llms_4/: pyproject.toml
03_crewai_online_class/class_13/multiple_agents_with_two_llms_4/src/multiple_agents/: main1.py
03_crewai_online_class/class_13/multiple_agents_with_two_llms_4/src/multiple_agents/crews/dev_crew/: dev_crew.py  dev_crew1.py
03_crewai_online_class/class_13/multiple_agents_with_two_llms_4/src/multiple_agents/crews/dev_crew/config/: agents.yaml
03_crewai_online_class/cursor/00_project/cal_proj/: pyproject.toml
03_crewai_online_class/cursor/00_project/cal_proj/src/cal_proj/: __init__.py  calculator.py
03_crewai_online_class/langgraph_functional_api/01_example/langgraph_examples/: pyproject.toml
03_crewai_online_class/langgraph_functional_api/01_example/langgraph_examples/src/langgraph_examples/: __init__.py  example.py
03_online_crewai_session/: README.md
