[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SHAHAB-UD-DIN", email = "150152275+SHAHAB-UD-DIN@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.59.7",
]

[project.scripts]
gemini = "my_project.hello:gemini"
gemini2 = "my_project.hello:gemini2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
