[project]
name = "knowledge5"
version = "0.1.0"
description = "knowledge5 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "knowledge5.main:kickoff"
plot = "knowledge5.main:plot"
kn = "knowledge5.main1:my_knowledge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
