[project]
name = "multiple_agents"
version = "0.1.0"
description = "multiple_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "multiple_agents.main:kickoff"
plot = "multiple_agents.main:plot"
mul_agents = "multiple_agents.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
