[project]
name = "pana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SHAHAB-UD-DIN", email = "150152275+SHAHAB-UD-DIN@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
pana = "pana:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
