[project]
name = "pana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SHAHAB-UD-DIN", email = "150152275+SHAHAB-UD-DIN@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "langgraph>=0.2.74",
    "litellm>=1.60.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
]

[project.scripts]
pana = "pana:main"
panaflow = "pana.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
